--- a/backend/lambdas/requirements.txt
+++ b/backend/lambdas/requirements.txt
@@ -1,5 +1,7 @@
-boto3==1.26.137
+PyJWT==2.8.0
+boto3==1.34.71
+python-dateutil==2.8.2
 requests==2.31.0
-google-analytics-data==0.16.1
+google-analytics-data==0.18.0
 google-auth==2.17.3
 python-dotenv==1.0.0 
