Implement domain deletion and enhanced WooCommerce data fetching - Added domain deletion functionality with backend and frontend support - Enhanced WooCommerce API to fetch total orders, current revenue, and top 3 selling products - Updated integrations page to display comprehensive WooCommerce store data - Added delete domain button with confirmation modal on dashboard - Improved error handling and user feedback throughout the application - Added API Gateway routes for domain deletion and enhanced integration endpoints

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -176,6 +176,13 @@ Resources:
             RestApiId: !Ref DashoraApiGateway
             Path: /domains
             Method: POST
+        # Delete domain endpoint
+        DeleteDomainEndpoint:
+          Type: Api
+          Properties:
+            RestApiId: !Ref DashoraApiGateway
+            Path: /domains/{domain}
+            Method: DELETE
         # Metrics endpoint
         MetricsEndpoint:
           Type: Api
