Increase Lambda timeout to 60 seconds and optimize WooCommerce API calls for better performance

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -145,6 +145,7 @@ Resources:
       FunctionName: dashora-api-handler
       CodeUri: ./lambdas/api_handler/
       Handler: lambda_function.lambda_handler
+      Timeout: 60
       Layers:
         - !Ref DashoraDependenciesLayer
       Policies:
